# Bitcoin-PIR

./: .gitignore  CLAUDE.md  Cargo.toml  FEATURES.md  LICENSE-APACHE  LICENSE-MIT  PUBLISHING.md  README.md  SDK_ROADMAP.md  YPIR_INTEGRATION_PLAN.md  YPIR_WASM_PLAN.md  fix-pir.md  flake.nix
.cargo/: config.toml
.claude/: TODO_HARMONYPIR.md
.github/workflows/: build-determinism.yml  deploy-web.yml  pir-sdk-integration.yml
batch_pir/: Cargo.toml
batch_pir/src/: eval.rs  protocol.rs
batch_web_client/: .gitignore  index.html  package.json  vite.config.js
batch_web_client/src/: constants.ts  dpf.ts  hash.ts  index.ts  protocol.ts
bitcoinj-pir/: HARMONYPIR_JAVA_REQUEST.md  USAGE.md  build.gradle  settings.gradle
block_reader/: Cargo.toml
block_reader/src/: block_stats.rs
bpir-admin/: Cargo.toml
bpir-admin/src/: attest.rs  channel_test.rs  generate_identity.rs  keygen.rs  main.rs  show_vcek_url.rs  sign_identity.rs  upload.rs
build_batchdb/: Cargo.toml
build_batchdb/src/: assign_chunk_queries.rs  assign_queries.rs  build_chunk_cuckoo.rs  build_utxo_chunks.rs  common.rs  extract_test_queries.rs  index_stats.rs  main.rs  plan_chunk_rounds.rs  test_batch_pir.rs  test_chunk_pir.rs  test_chunk_pir_batched.rs  utxo_stats.rs  verify.rs  verify_chunk_cuckoo.rs
build_db/: Cargo.toml
build_db/src/: lib.rs  utils.rs
deploy/systemd/: dev-issuer.service  pir-primary.service  pir-secondary.service  pir-vpsbg.service
dev-issuer/: Cargo.toml  README.md
dev-issuer/src/: main.rs
dev-issuer/tests/: cashu_roundtrip.rs  http_roundtrip.rs  verify_gate.rs
doc/: DEPLOYMENT.md  WALLET_INTEGRATION_ANALYSIS.md  WEB.md
docs/: BDK_WALLET_PROTOTYPE.md  BUILD_REPRODUCIBILITY.md  ONIONPIR_PORT_MIGRATION.md  OPERATOR_IDENTITY.md  PHASE3_ROADMAP.md  PHASE3_SLICE3_PLAN.md  PHASE3_SLICE3_RECOVERY.md  PHASE3_SLICE3_REPRO_PLAN.md  PIR1_REGISTER_KEYS_TRUNCATION.md  PIR1_STARTUP_HINT_POOL_THRASHING.md  RATELIMIT_DEMO.md  UPSTREAM_REQUEST_2402b16_REGRESSION.md  UPSTREAM_REQUEST_RUNTIME_NUM_PT.md  UPSTREAM_REQUEST_THREAD_SAFETY.md  VERIFICATION_OVERVIEW.md  release_checklist.md
dpf_pir/: Cargo.toml
dpf_pir/src/: database.rs  lib.rs  pir_protocol.rs  server_config.rs  server_config2.rs
electrum_plugin/: test_all_protocols.py  test_pir_client.py
electrum_plugin/harmonypir-python/: Cargo.toml  pyproject.toml
electrum_plugin/harmonypir-python/src/: lib.rs
electrum_plugin/onionpir-python/: onionpir_ffi.py
electrum_plugin/pir_privacy/: __init__.py  manifest.json  pir_client.py  pir_common.py  pir_constants.py  pir_dpf.py  pir_harmony_client.py  pir_hash.py  pir_onionpir_client.py  pir_plugin.py  pir_protocol.py  pir_synchronizer.py  pir_ws_client.py  qt.py
explorer/: package.json  test.ts  tsconfig.json
explorer/src/: address.ts  esplora-fallback.ts  explorer.ts  index.ts  types.ts  utxo-provider.ts
harmonypir-wasm/: Cargo.toml
harmonypir-wasm/src/: lib.rs
pdf/: build.sh  introduction.tex  main.aux  main.bbl  main.blg  main.out  main.tex  part1_data.tex  part2_batching.tex  part3_2server.tex  part4_harmonypir.tex  part5_onionpir.tex  part6_comparison.tex  part7_deployment.tex  part_delta.tex  part_merkle.tex
pir-attest-verify/src/: lib.rs  policy.rs
pir-channel/src/: lib.rs
pir-core/: Cargo.toml
pir-core/src/: attest.rs  cuckoo.rs  hash.rs  lib.rs  merkle.rs  onion_unpack.rs  params.rs  pbc.rs
pir-core/tests/: cross_build_determinism.rs
pir-identity/: Cargo.toml
pir-identity/src/: lib.rs
pir-runtime-core/: CHANGELOG.md  Cargo.toml  README.md
pir-runtime-core/src/: arc_verifier.rs  cashu_verifier.rs  eval.rs  handler.rs  identity.rs  lib.rs  manifest.rs  protocol.rs  table.rs
pir-sdk/: Cargo.toml  README.md
pir-sdk-client/: CHANGELOG.md  Cargo.toml  README.md
pir-sdk-client/examples/: find_colliding_scripthashes.rs  onion_leakage_dump.rs
pir-sdk-client/src/: announce.rs  attest.rs  connection.rs  dpf.rs  harmony.rs  hint_cache.rs  lib.rs  merkle_verify.rs  onion.rs  onion_merkle.rs  platform_time.rs  protocol.rs  transport.rs  wasm_transport.rs
pir-sdk-client/tests/: integration_test.rs  leakage_integration_test.rs
pir-sdk-server/: CHANGELOG.md  Cargo.toml
pir-sdk-server/examples/: simple_server.rs
pir-sdk-server/src/: loader.rs  server.rs
pir-sdk-wasm/: Cargo.toml  README.md  pir-sdk-wasm.d.ts
pir-sdk-wasm/src/: arc.rs  cashu.rs  client.rs  harmony_wire.rs  lib.rs  merkle_verify.rs  metrics.rs
pir-sdk/src/: backend.rs  client.rs  error.rs  lib.rs  metrics.rs  sync.rs  types.rs
proofs/easycrypt/: Leakage.ec  Protocol.ec  README.md  Simulator.ec  Theorem.ec
runtime/: Cargo.toml
runtime/src/: config.rs  eval.rs  hint_pool.rs  lib.rs  onionpir.rs  protocol.rs  table.rs  warmup.rs
scripts/: README.md  build_db_manifest.sh  build_delta_onion.sh  build_uki.sh  build_uki_tier3.sh  build_unified_server.sh  extract_delta_examples.js  install_hexl.sh  start_batch_pir_servers.sh  start_pir_servers.sh  start_pir_servers2.sh  test_batch_pir_client.sh
web/: .gitignore  index.html  package-lock.json  package.json  ratelimit-demo.html  reproduce.html  vite.config.js
web/public/: CNAME
web/src/: attest-pin.ts  cashu-bat.ts  client.ts  codec.ts  constants.ts  dpf-adapter.ts  dpf.ts  example_spks.json  harmony-types.ts  harmonypir-adapter.ts  harmonypir_client.ts  harmonypir_hint_db.ts  harmonypir_worker_pool.ts  hash.ts  index.ts  leakage.ts  merkle-verify-bucket.ts  merkle-verify-dpf.ts  merkle.ts  onion-unpack.ts  onionpir_client.ts  payment-client.ts  pbc.ts  polyfills.ts  protocol.ts  ratelimit-demo.ts  scan.ts  sdk-bridge.ts  server-info.ts  sync-controller.ts  sync-merge.ts  sync.ts  types.ts  wasm-bridge.ts  ws.ts
web_client/: DEBUG_GUIDE.md  README.md  USAGE_GUIDE.md  index.html  package-lock.json
web_client/src/: client.ts  constants.ts  dpf.ts  hash.ts  index.ts
web_client2/: .gitignore  DEBUG_GUIDE.md  README.md  USAGE_GUIDE.md  index.html  package.json  tsconfig.json  vite.config.js
web_client2/dist-web/: index.html
web_client2/src/: bincode.ts  client.ts  constants.ts  hash.ts  index.ts  polyfills.ts  sbp.ts
(+55 files in other folders)
