[workspace]
resolver = "2"
members = ["pir-core",
    "build",
    "runtime",
    "harmonypir-wasm",
    "block_reader",
    "pir-core-wasm",
]
exclude = ["electrum_plugin/harmonypir-python"]

[profile.release]
opt-level = 3
lto = "thin"
incremental = true
panic = 'abort'

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = "thin"
incremental = true
debug-assertions = false

[profile.dev]
opt-level = 3
panic = 'abort'

[profile.test]
opt-level = 3
lto = "thin"
incremental = true
debug-assertions = true
debug = true

# TODO(onionpir-pr): Remove this patch block once the upstream PR lands.
#
# This temporarily points `onionpir` at a local clone of
# Bitcoin-PIR/OnionPIRv2-fork so we can build against the new
# `load_db_from_borrowed` API introduced on branch
# `feat/load-db-from-borrowed`. Once that branch is merged into main,
# drop this [patch] section and update runtime/Cargo.toml's onionpir
# dep to pin to the merge commit SHA.
[patch."https://github.com/Bitcoin-PIR/OnionPIRv2-fork.git"]
onionpir = { path = "/Users/cusgadmin/bitcoin-pir/OnionPIRv2/rust/onionpir" }
