[workspace]
resolver = "2"
members = [
    "pir-core",
    "pir-sdk",
    "pir-runtime-core",
    "pir-sdk-server",
    "pir-sdk-client",
    "pir-sdk-wasm",
    "build",
    "runtime",
    "harmonypir-wasm",
    "block_reader",
]
exclude = ["electrum_plugin/harmonypir-python"]

[profile.release]
opt-level = 3
lto = "thin"
incremental = true
panic = 'abort'

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = "thin"
incremental = true
debug-assertions = false

[profile.dev]
opt-level = 3
panic = 'abort'

[profile.test]
opt-level = 3
lto = "thin"
incremental = true
debug-assertions = true
debug = true
