[workspace]
resolver = "2"
members = [
    "pir-core",
    "pir-channel",
    "pir-identity",
    "pir-attest-verify",
    "pir-sdk",
    "pir-runtime-core",
    "pir-sdk-server",
    "pir-sdk-client",
    "pir-sdk-wasm",
    "bpir-admin",
    "build",
    "runtime",
    "harmonypir-wasm",
    "block_reader",
]
exclude = ["electrum_plugin/harmonypir-python"]

[profile.release]
opt-level = 3
lto = "thin"
# codegen-units = 1 + incremental = false make the build deterministic at
# the cost of slower release compilations (sub-task 2 of
# docs/PHASE3_SLICE3_REPRO_PLAN.md). The unified_server binary baked into
# the Tier 3 UKI uses this profile, so its bytes — and therefore the
# resulting MEASUREMENT — must be reproducible across operators.
codegen-units = 1
incremental = false
panic = 'abort'

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = "thin"
incremental = true
debug-assertions = false

[profile.dev]
opt-level = 3
panic = 'abort'

[profile.test]
opt-level = 3
lto = "thin"
incremental = true
debug-assertions = true
debug = true
