[package]
name = "batch_pir"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server2"
path = "src/bin/server2.rs"

[[bin]]
name = "client2"
path = "src/bin/client2.rs"

[dependencies]
build_batchdb = { path = "../build_batchdb" }
libdpf = { git = "https://github.com/weikengchen/libdpf.git" }
memmap2 = "0.9"
rayon = "1.10"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
