[package]
name = "block_reader"
version = "0.1.0"
edition = "2021"

# Workspace-internal tooling crate (block-chain ingest helpers).
# Not a library — not published to crates.io.
publish = false

[[bin]]
name = "block_stats"
path = "src/block_stats.rs"

[[bin]]
name = "utxo_delta"
path = "src/utxo_delta.rs"

[dependencies]
pir-core = { path = "../pir-core" }
bitcoin = "0.32.7"
brk_reader = "0.2"
brk_rpc = "0.2"
