[package]
name = "bitcoinpir"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
bitcoin = "0.32.7"
tokio = { version = "1.35", features = ["full"] }
hex = "0.4"
log = "0.4.*"
memmap2 = "0.9"
txoutset = "0.4"

[dev-dependencies]
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = "thin"
incremental = true
panic = 'abort'

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = "thin"
incremental = true
debug-assertions = false

[profile.dev]
opt-level = 3
panic = 'abort'

[profile.test]
opt-level = 3
lto = "thin"
incremental = true
debug-assertions = true
debug = true
