[package]
name = "dpf_pir"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
libdpf = { git = "https://github.com/weikengchen/libdpf.git" }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
hex = "0.4"
log = "0.4"
env_logger = "0.10"
sha2 = "0.10"
ripemd = "0.1"
memmap2 = "0.9"
rand = "0.8"

# WebSocket support
tokio-tungstenite = "0.21"
futures-util = "0.3"

# TLS support for secure WebSocket (wss://)
tokio-rustls = "0.25"
rustls-pemfile = "2.0"

