[package]
name = "harmonypir-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM bindings for HarmonyPIR stateful PIR client"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
fastprp = ["harmonypir/fastprp-prp"]
alf = ["harmonypir/alf"]

[dependencies]
harmonypir = { git = "https://github.com/Bitcoin-PIR/harmonypir.git", rev = "a849dedfe0b0ab283c7c9ad9e20f8775b01b4543", default-features = false }
wasm-bindgen = "0.2"
rand = "0.8"
rand_chacha = "0.3"
js-sys = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
opt-level = "s"
lto = true
