[package]
name = "harmonypir-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM bindings for HarmonyPIR stateful PIR client"

# Not publishable: has a git dep on the upstream `harmonypir` crate.
# Once `harmonypir` is on crates.io, drop this line and pin a semver
# version on the dep. See PUBLISHING.md "Blocker 1".
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
fastprp = ["harmonypir/fastprp-prp"]
alf = ["harmonypir/alf"]

[dependencies]
harmonypir = { git = "https://github.com/Bitcoin-PIR/harmonypir.git", rev = "a849dedfe0b0ab283c7c9ad9e20f8775b01b4543", default-features = false }
wasm-bindgen = "0.2"
rand = "0.8"
rand_chacha = "0.3"
js-sys = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

# Per-package profile overrides must live at the workspace root; Cargo
# ignores `[profile.*]` here. See the note in `../pir-sdk-wasm/Cargo.toml`
# for the recommended `wasm-release` profile pattern if size-optimized
# builds are needed.
