[package]
name = "pir-runtime-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
build = "build.rs"
authors = ["Bitcoin PIR contributors"]
description = "Server-side runtime primitives for Bitcoin PIR: wire protocol, mmap'd database tables, DPF evaluation, and the request handler shared by binary servers and pir-sdk-server"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Bitcoin-PIR/Bitcoin-PIR"
homepage = "https://github.com/Bitcoin-PIR/Bitcoin-PIR"
documentation = "https://docs.rs/pir-runtime-core"
readme = "README.md"
keywords = ["pir", "privacy", "bitcoin", "cryptography", "server"]
categories = ["cryptography", "cryptography::cryptocurrencies", "network-programming::server"]

[dependencies]
pir-core = { version = "0.1.0", path = "../pir-core" }
pir-channel = { version = "0.1.0", path = "../pir-channel" }
libdpf = { git = "https://github.com/weikengchen/libdpf.git" }
memmap2 = "0.9"
rayon = "1.10"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
ed25519-dalek = "2"
x25519-dalek = { version = "2", features = ["static_secrets"] }
rand_core = { version = "0.6", features = ["getrandom"] }
getrandom = "0.2"
arc = { git = "https://github.com/Bitcoin-PIR/arc.git", rev = "de6c1709eee0faa32985d5a452be11904ee95de4" }
k256 = { version = "0.13", features = ["arithmetic", "ecdsa"] }
sha2 = "0.10"
hex = "0.4"
serde_json = "1"

[dev-dependencies]
tempfile = "3"
