[package]
name = "pir-sdk-client"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
authors = ["Bitcoin PIR contributors"]
description = "Native Rust PIR client for DPF, HarmonyPIR, and OnionPIR backends (two-server and single-server FHE)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Bitcoin-PIR/Bitcoin-PIR"
homepage = "https://github.com/Bitcoin-PIR/Bitcoin-PIR"
documentation = "https://docs.rs/pir-sdk-client"
readme = "README.md"
keywords = ["pir", "privacy", "bitcoin", "cryptography", "websocket"]
categories = ["cryptography", "cryptography::cryptocurrencies", "network-programming"]

[features]
default = []
# Enable fast PRP backend (FastPRP) for HarmonyPIR — faster per-element but slower build.
fastprp = ["harmonypir-wasm/fastprp"]
# Enable ALF PRP backend for HarmonyPIR — fastest per-element with native per-group tweaks.
alf = ["harmonypir-wasm/alf"]
# Enable the real OnionPIR client. Off by default because the upstream
# `onionpir` crate requires a C++ toolchain + cmake + Homebrew GCC on macOS
# and pulls in the SEAL submodule. Without this feature, `OnionClient` keeps
# its placeholder behavior (warn + return None). Native-only — the `onion`
# feature is not compatible with `wasm32` targets (SEAL does not build there).
onion = ["dep:onionpir", "dep:rand"]

# ─── Cross-target dependencies ──────────────────────────────────────────────
# These compile on both native (tokio) and wasm32 (web-sys). Anything that
# pulls in tokio / tokio-tungstenite / rustls / a C toolchain must live in the
# target-specific sections below.

[dependencies]
# Core SDK types and traits
pir-sdk = { version = "0.1.0", path = "../pir-sdk" }
pir-core = { version = "0.1.0", path = "../pir-core" }

# DPF library — pure Rust, works on any target.
libdpf = { git = "https://github.com/weikengchen/libdpf.git" }

# HarmonyPIR stateful per-group wrapper (reusable native rlib).
# Note: no `version` because harmonypir-wasm is not publishable to
# crates.io today (git dep on upstream `harmonypir`). The path dep
# works for workspace development; `cargo publish -p pir-sdk-client`
# is gated on resolving this per PUBLISHING.md "Blocker 1".
harmonypir-wasm = { path = "../harmonypir-wasm" }

# OnionPIR v2 FFI bindings — C++ SEAL-based FHE. Pulled in only under the
# `onion` feature because it requires a native toolchain (cmake, GCC, SEAL
# submodule). Pinned to the same rev used by the `runtime` crate.
onionpir = { git = "https://github.com/Bitcoin-PIR/OnionPIRv2-fork.git", rev = "f18e4985ba835c5563ff804b3fa2c74722d17f6c", optional = true }
rand = { version = "0.8", optional = true }

# `async_trait` is pure-Rust and works on any target — both the native
# WsConnection impl and the WASM WebSocket transport impl share it.
async-trait = "0.1"

# futures-util combinators are cross-target. The native WebSocket path uses
# `StreamExt`/`SinkExt`; the WASM path uses channel combinators.
futures-util = "0.3"

# Logging
log = "0.4"

# Structured tracing (spans + events). Additive: the `log::info!` audit
# trail still works unchanged, and `tracing`'s `log` feature bridges
# existing `log::*!` calls into any installed `tracing` subscriber so
# callers get a unified event stream. No-op unless a subscriber is
# installed. Cross-target — `tracing` core compiles to wasm32.
tracing = { version = "0.1", features = ["log"] }

# Error handling
thiserror = "1.0"

# ─── Native (tokio + tungstenite) target deps ───────────────────────────────
# The tokio reactor does not run on `wasm32-unknown-unknown`. Everything that
# needs `net` / `time` / multi-threaded I/O lives here so the crate can still
# compile to wasm32 with the new `WasmWebSocketTransport` (see the wasm32
# section below).

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Async runtime.
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "macros", "io-util", "time"] }
# `rustls-tls-webpki-roots` enables `wss://` with the bundled Mozilla root
# store. No system OpenSSL/schannel dependency — works identically in CI
# across Linux/macOS/Windows and in consumer apps that don't want a
# native-tls dependency.
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
# Explicit rustls dep to pin the `ring` crypto provider (rustls 0.23+
# requires exactly one of `ring` / `aws-lc-rs`; `ring` is pure-Rust and
# avoids the C toolchain dependency `aws-lc-rs` brings). The provider is
# installed at `WsConnection::connect()` time via
# `install_default_crypto_provider()`.
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }

# ─── WASM (wasm32-unknown-unknown) target deps ──────────────────────────────
# Browsers expose `WebSocket` as a callback-driven DOM object; we bridge it
# to async via a `futures_channel::mpsc` receiver. `wasm-bindgen-futures`
# lets the client's `async fn` surface run on the JS event loop.

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "BinaryType",
    "Blob",
    "CloseEvent",
    "ErrorEvent",
    "Event",
    "FileReader",
    "MessageEvent",
    "ProgressEvent",
    "WebSocket",
] }
# `futures` brings the cross-task join / select combinators that replace
# `tokio::try_join!` on the WASM single-threaded event loop.
futures = "0.3"
futures-channel = "0.3"
# `web_sys::WebSocket` and `Rc<RefCell<_>>` are `!Send + !Sync`, but
# `PirTransport: Send + Sync` is required so the trait object satisfies
# `PirClient: Send + Sync` on the native side of the codebase (and because
# `#[async_trait]` futures have a Send bound by default). `SendWrapper<T>`
# unsafely impls `Send + Sync` for any `T`, panicking on access from a
# thread other than the one that constructed it — which on
# `wasm32-unknown-unknown` is always the main thread. This lets us keep
# one PirTransport trait shape across both targets.
send_wrapper = "0.6"

[dev-dependencies]
env_logger = "0.11"
hex = "0.4"
# Test-only: a subscriber that captures formatted span/event output for
# assertion. Kept as a dev-dep to avoid forcing a subscriber choice on
# downstream callers — production code only depends on the facade.
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
